// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots css/domain/blog/toc/item Toc Item 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <nav
        aria-label="Toc container"
        className="wrappedNav"
      >
        <button
          aria-label="hide the Toc"
          className="blind"
        />
        <div
          className="container"
        >
          <h1
            className="title"
          >
            Table of Contents
          </h1>
          <nav
            aria-label="Toc navigation"
            className="item"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ul><li><p><a href=\\"/blog/hello-world/#h1-1\\">h1-1</a></p><ul><li><a href=\\"/blog/hello-world/#h2-1\\">h2-1</a></li><li><a href=\\"/blog/hello-world/#h2-2\\">h2-2</a></li><li><a href=\\"/blog/hello-world/#h2-3\\">h2-3</a></li></ul></li><li><p><a href=\\"/blog/hello-world/#h1-2\\">h1 2</a></p><ul><li><a href=\\"/blog/hello-world/#h2\\">h2</a></li></ul></li></ul>",
              }
            }
          />
          <button
            aria-label="Toc button"
            className="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <nav
        aria-label="Toc container"
        className="wrappedNav"
      >
        <button
          aria-label="hide the Toc"
          className="blind"
        />
        <div
          className="container"
        >
          <h1
            className="title"
          >
            Table of Contents
          </h1>
          <nav
            aria-label="Toc navigation"
            className="item"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ul><li><p><a href=\\"/blog/hello-world/#h1-1\\">h1-1</a></p><ul><li><a href=\\"/blog/hello-world/#h2-1\\">h2-1</a></li><li><a href=\\"/blog/hello-world/#h2-2\\">h2-2</a></li><li><a href=\\"/blog/hello-world/#h2-3\\">h2-3</a></li></ul></li><li><p><a href=\\"/blog/hello-world/#h1-2\\">h1 2</a></p><ul><li><a href=\\"/blog/hello-world/#h2\\">h2</a></li></ul></li></ul>",
              }
            }
          />
          <button
            aria-label="Toc button"
            className="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </body>
</div>
`;

exports[`Storyshots css/domain/blog/toc/item Wrapped Toc Item 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <body
    data-theme="light"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <nav
        aria-label="Toc container"
        className="wrappedNav"
      >
        <button
          aria-label="hide the Toc"
          className="wrappedBlind"
        />
        <div
          className="container"
        >
          <h1
            className="title"
          >
            Table of Contents
          </h1>
          <nav
            aria-label="Toc navigation"
            className="wrappedItem"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ul><li><p><a href=\\"/blog/hello-world/#h1-1\\">h1-1</a></p><ul><li><a href=\\"/blog/hello-world/#h2-1\\">h2-1</a></li><li><a href=\\"/blog/hello-world/#h2-2\\">h2-2</a></li><li><a href=\\"/blog/hello-world/#h2-3\\">h2-3</a></li></ul></li><li><p><a href=\\"/blog/hello-world/#h1-2\\">h1 2</a></p><ul><li><a href=\\"/blog/hello-world/#h2\\">h2</a></li></ul></li></ul>",
              }
            }
          />
          <button
            aria-label="Toc button"
            className="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </body>
  <body
    data-theme="dark"
    style={
      Object {
        "flexGrow": 1,
        "height": "100vh",
        "overflow": "auto",
      }
    }
  >
    <div>
      <nav
        aria-label="Toc container"
        className="wrappedNav"
      >
        <button
          aria-label="hide the Toc"
          className="wrappedBlind"
        />
        <div
          className="container"
        >
          <h1
            className="title"
          >
            Table of Contents
          </h1>
          <nav
            aria-label="Toc navigation"
            className="wrappedItem"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ul><li><p><a href=\\"/blog/hello-world/#h1-1\\">h1-1</a></p><ul><li><a href=\\"/blog/hello-world/#h2-1\\">h2-1</a></li><li><a href=\\"/blog/hello-world/#h2-2\\">h2-2</a></li><li><a href=\\"/blog/hello-world/#h2-3\\">h2-3</a></li></ul></li><li><p><a href=\\"/blog/hello-world/#h1-2\\">h1 2</a></p><ul><li><a href=\\"/blog/hello-world/#h2\\">h2</a></li></ul></li></ul>",
              }
            }
          />
          <button
            aria-label="Toc button"
            className="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </body>
</div>
`;
